[gd_scene load_steps=4 format=3 uid="uid://cgbywxsccfhda"]

[ext_resource type="Script" path="res://scripts/ui/control_pause.gd" id="1_ghwum"]
[ext_resource type="Theme" uid="uid://bta37afsxmgt5" path="res://assets/themes/default_theme.tres" id="1_i63i0"]
[ext_resource type="PackedScene" uid="uid://becfukrllb44n" path="res://scenes/components/button_component.tscn" id="3_j3d6e"]

[node name="ControlPause" type="Control" node_paths=PackedStringArray("check_sfx", "check_music", "slider_sfx", "slider_music")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i63i0")
script = ExtResource("1_ghwum")
check_sfx = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxCheck/CheckSFX")
check_music = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxCheck/CheckMusic")
slider_sfx = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxSlider/SliderSFX")
slider_music = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxSlider/SliderMusic")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -64.0
offset_right = 66.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxCheck" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CheckSFX" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxCheck"]
layout_mode = 2
size_flags_vertical = 3
button_pressed = true

[node name="ButtonComponent" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxCheck/CheckSFX" instance=ExtResource("3_j3d6e")]

[node name="CheckMusic" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxCheck"]
layout_mode = 2
size_flags_vertical = 3
button_pressed = true

[node name="ButtonComponent" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxCheck/CheckMusic" instance=ExtResource("3_j3d6e")]

[node name="VBoxType" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxType"]
layout_mode = 2
size_flags_vertical = 6
text = "SFX"

[node name="MusicLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxType"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"

[node name="VBoxSlider" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SliderSFX" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
min_value = -60.0
max_value = 15.0

[node name="SliderMusic" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
min_value = -60.0
max_value = 15.0

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Resume"

[node name="ButtonComponent" parent="PanelContainer/MarginContainer/VBoxContainer/ResumeButton" instance=ExtResource("3_j3d6e")]

[node name="MenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Menu"

[node name="ButtonComponent" parent="PanelContainer/MarginContainer/VBoxContainer/MenuButton" instance=ExtResource("3_j3d6e")]

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxCheck/CheckSFX" to="." method="_on_check_sfx_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxCheck/CheckMusic" to="." method="_on_check_music_toggled"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxSlider/SliderSFX" to="." method="_on_slider_sfx_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxSlider/SliderMusic" to="." method="_on_slider_music_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
